fixed overlap

--- a/service/web/assets/stylesheets/newsfeed.css
+++ b/service/web/assets/stylesheets/newsfeed.css
@@ -96,8 +96,9 @@ ul li .row .name h4 {
 }
 ul li .row .time {
   float: right;
-  /*margin-right: 10px;*/
-  margin-top: 10px;
+  margin-right: 10px;
+  /*margin-top: 10px;*/
+  margin-top: 0;
   color: #888;
 }
 ul li .row .comment {
